WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53567
REGRESSION(
r75982
): [Chromium] Wrong popup position for RTL
https://bugs.webkit.org/show_bug.cgi?id=53567
Summary
REGRESSION(r75982): [Chromium] Wrong popup position for RTL
Naoki Takano
Reported
2011-02-01 18:51:27 PST
[Chromium]Fix popup menu RTL bug introduced by Changeset 75982.
Attachments
Patch
(4.68 KB, patch)
2011-02-01 19:00 PST
,
Naoki Takano
tkent
: review-
Details
Formatted Diff
Diff
Delete tabs
(4.76 KB, application/octet-stream)
2011-02-02 00:11 PST
,
Naoki Takano
no flags
Details
Delete tabs
(4.76 KB, patch)
2011-02-02 00:12 PST
,
Naoki Takano
no flags
Details
Formatted Diff
Diff
Patch
(7.35 KB, patch)
2011-02-11 00:36 PST
,
Naoki Takano
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Naoki Takano
Comment 1
2011-02-01 19:00:03 PST
Created
attachment 80873
[details]
Patch
Naoki Takano
Comment 2
2011-02-01 19:00:38 PST
Comment on
attachment 80873
[details]
Patch Could you review?
WebKit Review Bot
Comment 3
2011-02-01 19:02:45 PST
Attachment 80873
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kent Tamura
Comment 4
2011-02-01 19:09:44 PST
Comment on
attachment 80873
[details]
Patch Please fix style errors. The code looks good.
Naoki Takano
Comment 5
2011-02-02 00:11:38 PST
Created
attachment 80899
[details]
Delete tabs My vim automatically inserted tabs. I'll check my environment...
Naoki Takano
Comment 6
2011-02-02 00:12:38 PST
Created
attachment 80900
[details]
Delete tabs
Kent Tamura
Comment 7
2011-02-02 00:30:05 PST
Comment on
attachment 80900
[details]
Delete tabs ok
WebKit Commit Bot
Comment 8
2011-02-02 00:50:52 PST
Comment on
attachment 80900
[details]
Delete tabs Clearing flags on attachment: 80900 Committed
r77370
: <
http://trac.webkit.org/changeset/77370
>
WebKit Commit Bot
Comment 9
2011-02-02 00:50:57 PST
All reviewed patches have been landed. Closing bug.
Naoki Takano
Comment 10
2011-02-11 00:36:11 PST
Created
attachment 82111
[details]
Patch
Naoki Takano
Comment 11
2011-02-11 00:38:00 PST
Comment on
attachment 82111
[details]
Patch Tamaru-san, Sorry for bothering you. Could you review again? As I wrote in ChangeLog, this is not good for the chrome bug
http://codereview.chromium.org/6024008/
Thanks,
Kent Tamura
Comment 12
2011-02-13 17:48:11 PST
Please don't make a committed patch obsolete. Please file another bug.
Naoki Takano
Comment 13
2011-02-13 23:23:10 PST
Ok, (In reply to
comment #12
)
> Please don't make a committed patch obsolete. > Please file another bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug